--- a/examples/Basic.html
+++ b/examples/Basic.html
@@ -22,8 +22,8 @@
 
 window.onload = function () {
 	MIDI.loadPlugin({
-		soundfontUrl: "./soundfont/",
-		instrument: "acoustic_grand_piano",
+		soundfontUrl: "https://gleitz.github.io/midi-js-soundfonts/FluidR3_GM/",
+		instrument: [ "acoustic_grand_piano", "harmonica", "sitar" ],
 		onprogress: function(state, progress) {
 			console.log(state, progress);
 		},
